盒子模型学习

--- a/html/basic/1_basic.html
+++ b/html/basic/1_basic.html
@@ -50,5 +50,14 @@
     <video src="" controls muted>视频标签 </video>
     <p>视频标签和音频属性相同，多了一个muted 如果静音关闭，才能自动播放</p>
 
+
+    <div style="width: 100px; height: 100px; background-color: aqua;">
+        <a href="#">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</a>
+    </div>
+
+    <div style="width: 100px; height: 100px; background-color: red;">
+        <a href="#">3333333333333333333333333</a>
+    </div>
+
 </body>
 </html>
