--- a/html/flex/1_flex_basic.html
+++ b/html/flex/1_flex_basic.html
@@ -11,11 +11,12 @@
         /* space-between 左右两端对齐，平分 自动拉出间距 3 3 */
         /* space-around  左右两端不对齐，每个item两边出现等间距环绕 3 5  */
         /* space-evenly  左右两端不对齐 间距宽度相等 3 5 */
-        justify-content: space-evenly;
+        /* justify-content: space-evenly; */
+        align-content: en;
         /* 控制盒子内容 测(Y)轴对齐方式 */
         /* center  垂直居中*/
         /* stretch 垂直拉伸 前提是item没有设置尺寸 */
-        align-items: stretch;
+        /* align-items: stretch; */
         background-color: pink;
         height: 300px;
         border: 1px solid black;
@@ -32,7 +33,7 @@
       }
       .box .item {
         display: flex;
-        /* 控制盒子内容排列方式 */
+        /* 控制盒子主轴排列方式，有X变为Y轴 */
         flex-direction: column;
         justify-content: center;
         text-align: center;
@@ -48,5 +49,4 @@
       <div>你好</div>
       <div>你好</div>
     </div>
-  </body>
 </html>
